--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.682.0",
     "@aws-sdk/client-ses": "^3.682.0",
+    "lambda-multipart-parser": "1.0.1",
     "nodemailer": "^6.9.16"
   }
 }
